# rag-testing-playground

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-test.yml
src/: rag.py
test/: evaluate.py
